# hw-22.Django

./: .env.example  .gitignore  README.md  category_fixture.json  manage.py  product_fixture.json  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_product.py  create_groups.py
catalog/migrations/: 0001_initial.py  0002_alter_product_options_remove_product_is_published_and_more.py
catalog/templates/: base.html  category_products.html  contacts.html  home.html  menu.html  product_confirm_delete.html  product_detail.html  product_form.html
catalog/templates/blog/: post_confirm_delete.html  post_details.html  post_form.html  post_list.html
catalog/templates/users/: login.html  register.html
hw_22/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_customuser_avatar_alter_customuser_country_and_more.py  0003_alter_customuser_phone.py
